@@ -7,7 +7,8 @@ Features:
 
 Changes:
 - cmdline: Comic lists are displayed one page at a time.
-- events: HTML output embeds the images in the page.
+- output: HTML output embeds the images in the page and show the page URLs.
+- output: The --output option can be given multiple times.
 
 Fixes:
 - cmdline: Catch error when piping output to another
